--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "obsidian-sample-plugin",
-  "version": "0.12.0",
+  "name": "obsidian-experiments-plugin",
+  "version": "0.0.1",
   "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
   "main": "main.js",
   "scripts": {
